--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,44 @@
 html {
   color: #222;
   line-height: 1.4;
+  font-family: "Open Sans";
+  height: 100vh;
+}
+
+body {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  height: 100vh;
+  font-family: "Indie Flower", cursive;
+  font-weight: 600;
+}
+
+/* dark mode pallette */
+.dark-palette {
+  background-color: #121212;
+  color: lightgreen;
+  font-weight: 100;
+}
+
+.food {
+  width: 35%;
+  background-image: url("../img/victoria-shes-unsplash.jpg");
+  background-size: cover;
+  height: 600px;
+}
+
+button {
+  margin: 0 10px 20px 10px;
+  padding: 5px 10px;
+  font-weight: bold;
+}
+
+html {
+  color: #222;
+  line-height: 1.4;
   font-family: "Hind";
   height: 100vh;
 }
@@ -34,14 +72,16 @@ h1 {
   text-transform: uppercase;
   padding-bottom: 0.5rem;
   margin: 0 0 1rem 0;
-  padding: 1.75rem;
-  padding-bottom: 2.5rem;
+
+  padding: 1rem;
+  padding-bottom: 1.5rem;
 }
 
 p {
   font-size: 1.25rem;
   line-height: 1.285;
   text-align: center;
+  margin: 0.5rem 0;
 }
 
 .fancy {
@@ -97,7 +137,7 @@ main {
 }
 
 .big {
-  font-size: 7.5rem;
+  font-size: 4.5rem;
   line-height: 1;
 }
 
@@ -123,6 +163,7 @@ footer {
   text-align: center;
   font-size: 0.8rem;
   color: #968e8e;
+  margin-top: 10px;
 }
 
 .location,
@@ -130,9 +171,26 @@ footer {
   width: 100%;
 }
 
+@media (min-width: 550px) {
+  .big {
+    font-size: 6.5rem;
+  }
+  h1 {
+    padding: 1.75rem;
+    padding-bottom: 2.5rem;
+  }
+}
 @media (min-width: 850px) {
   body {
     font-size: 20px;
+  }
+
+  .big {
+    font-size: 7.5rem;
+  }
+
+  p {
+    margin: 1.25rem 0;
   }
 
   .food {
